# friends-wallet

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  setup.cfg  Диаграмма без названия.drawio
server/: urls.py
server/apps/debts/: admin.py  apps.py  managers.py  models.py  querysets.py  services.py
server/apps/debts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_grouppersonaldebt_options_and_more.py
server/apps/groups/: admin.py  apps.py  models.py
server/apps/groups/migrations/: 0001_initial.py  0002_initial.py  0003_alter_group_options_alter_groupmember_options_and_more.py  0004_alter_groupmember_options.py
server/apps/receipts/: admin.py  apps.py  exceptions.py  models.py  services.py
server/apps/users/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
server/core/: exceptions.py
server/core/auth/: permissions.py  tokens.py
server/core/mixins/: models.py
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  db.py  jwt_authentication.py  rest_framework.py  swagger.py
server/settings/environments/: development.py
server/templates/swagger/: swagger.html
source/: settings.py
source/apps/debts/: admin.py  apps.py  models.py  services.py
source/apps/receipts/: admin.py  apps.py  models.py  services.py
source/apps/users/: admin.py  apps.py  models.py
tests/: conftest.py
tests/factories/: users.py
tests/integration/: conftest.py  test_account.py  test_auth.py
tests/unit/: test_permissions.py
(+25 files in other folders)
